[project]
name = "pdf-md-olmocr"
version = "0.1.0"
description = "Local-first PDF to Markdown extraction using olmOCR and LM Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
pdfmd = "pdf_md_olmocr.cli:app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
